--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -35,4 +35,24 @@ main{
     background-color: $mask-color;
     border: 1p solid $bordercolor;
     border-radius: 10px;
+    box-shadow: 1px 1px 2.5px $shadowcolor;
+
+}
+
+img{
+    display: block;
+}
+
+hr{
+    width: 90%;
+    margin: auto;
+    border: 1px solid $bordercolor;
+}
+
+.none{
+    display: none;
+}
+
+.block{
+    display: block;
 }
