--- a/scss/main.css
+++ b/scss/main.css
@@ -39,4 +39,73 @@ main {
   background-color: rgba(0, 0, 0, 0.1);
   border: 1p solid lightgray;
   border-radius: 10px;
+  box-shadow: 1px 1px 2.5px #fff;
+}
+
+img {
+  display: block;
+}
+
+hr {
+  width: 90%;
+  margin: auto;
+  border: 1px solid lightgray;
+}
+
+.none {
+  display: none;
+}
+
+.block {
+  display: block;
+}
+
+.offscreen {
+  position: absolute;
+  left: -10000px;
+}
+
+.skip-link {
+  position: absolute;
+  top: -999px;
+  left: 0;
+  background: #000;
+  padding: 14px;
+  z-index: 1;
+  color: #fff;
+}
+
+.skip-link:focus,
+.skip-link:active {
+  top: auto;
+  left: auto;
+}
+
+.button {
+  min-width: 48px;
+  min-height: 48px;
+  color: #fff;
+  border: 2px solid lightgray;
+  border-radius: 80px;
+  outline: none;
+  font-size: 1.25rem;
+  font-weight: 900;
+  background-color: transparent;
+}
+@media only screen and (min-width: 768px) {
+  .button {
+    font-size: 1.5rem;
+    min-width: 64px;
+    min-height: 64px;
+  }
+}
+
+.button:hover {
+  cursor: pointer;
+}
+
+.button:hover,
+.button:focus {
+  box-shadow: 4px 2px 5 px #000;
+  border-color: #fff;
 }/*# sourceMappingURL=main.css.map */
